--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -9,6 +9,7 @@
 				<th>#</th>
 				<th>Title</th>
 				<th>Description</th>
+				<th>Creator</th>
 				<th>Options</th>
 			</tr>
 		</thead>
@@ -20,6 +21,7 @@
 				<td><%= group.id %></td>
 				<td><%= link_to group.title, group_path(group) %></td>
 				<td><%= simple_format(group.description) %></td>
+				<td><%= group.user.email %></td>
 				<td>
 					<%= link_to("Edit", edit_group_path(group), class: "btn btn-sm btn-default") %>
 					<%= link_to("Delete", group_path(group), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-default") %>
