--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -5,6 +5,7 @@
 
 	<div class="group">
 		<% if  current_user && current_user == @group.user %>
+			<%= link_to("Add a Post", new_group_post_path(@group), class: "btn btn-default pull-right") %>
 			<%= link_to("Edit", edit_group_path(@group), class: "btn btn-primary pull-right") %>
 		<% end %>
 	</div>
@@ -16,6 +17,27 @@
 		<p>
 			<%= simple_format(@group.description) %>
 		</p>
+
+		<table class="table table-hover">
+			<thead>
+				<tr>
+					<th>文章</th>
+					<th>发表者</th>
+					<th>发表时间</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @posts.each do |post| %>
+				<tr>
+					<td><%= simple_format(post.content) %></td>
+					<td><%= post.user.email %></td>
+					<td><%= post.created_at %></td>
+				</tr>
+					
+
+				<% end %>
+			</tbody>
+		</table>
 	</div>
 	
 </div>
