--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -4,8 +4,16 @@
 <div class="col-md-12">
 
 	<div class="group">
+		<span class="pull-right">
+			<% if current_user && current_user.is_member_of?(@group) %>
+				<label class="label label-success">群组成员</label>
+			<% else %>
+				<label class="label label-warning">非群组成员</label>
+			<% end %>
+		</span>
+		<%= link_to("Add a Post", new_group_post_path(@group), class: "btn btn-default pull-right") %>
 		<% if  current_user && current_user == @group.user %>
-			<%= link_to("Add a Post", new_group_post_path(@group), class: "btn btn-default pull-right") %>
+			
 			<%= link_to("Edit", edit_group_path(@group), class: "btn btn-primary pull-right") %>
 		<% end %>
 	</div>
@@ -40,6 +48,6 @@
 		</table>
 	</div>
 	<div class="text-center">
-		<%= will_paginate @postsgro %>
+		<%= will_paginate @posts %>
 	</div>
 </div>
