--- a/app/views/account/groups/index.html.erb
+++ b/app/views/account/groups/index.html.erb
@@ -20,7 +20,7 @@
 					<td><%= link_to group.title, group_path(group) %></td>
 					<td><%= simple_format(group.description) %></td>
 					<td><%= group.posts.count %></td>
-					<td><%= group.created_at %></td>
+					<td><%= group.updated_at %></td>
 				</tr>
 
 
